--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
           </div>
           <div class="row">
             <div class="col-md-12 text-center">
-              <a href="#" class="try-btn">Try Demo</a>
+              <a href="https://wa.me/9633629902" class="try-btn">contanct us</a>
             </div>
           </div>
         </div>
